--- a/style.css
+++ b/style.css
@@ -106,3 +106,80 @@ footer {
  margin-top: 10em;
  color: white;
 }
+
+.fit-picture {
+    width: 30px;
+    margin-left: 10px;
+  }
+  .img-contact {
+    width: 200px;
+    height: 100%;
+  }
+  
+  /* RESPONSIVE CSS
+  -------------------------------------------------- */
+  
+  @media (max-width: 902px) {
+    /* Bump up size of carousel content */
+    .carousel {
+      display: none;
+    }
+  
+    .img-home {
+      width: 100%;
+      height: auto;
+      display: flex;
+      margin: auto;
+    }
+    .canicross {
+      width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    }
+  
+    iframe {
+      width: 100%;
+      height: auto;
+    }
+  }
+    @media (min-width: 768px) {
+      /* Bump up size of carousel content */
+      .carousel-caption p {
+        font-size: 20px; 
+        font-size: 1.25rem;
+      line-height: 1.4;
+      }
+      .img-home {
+        width: 60%;
+        height: auto;
+        display: flex;
+        margin: auto;
+      }
+  
+      .canicross {
+        width: 500px;
+        height: auto;
+        margin-left: 9rem;
+        margin-top: 2rem;
+      }
+      
+    .featurette-heading {
+      font-size: 50px;
+    }
+    }
+  
+  @media (min-width: 62em) {
+    .featurette-heading {
+      margin-top: 7rem;
+    }
+  }
+  
+  .row {
+    margin-left: 10px;
+    
+  
+  }
+  .mb-4 {
+    margin-top: 3em;
+    padding-top: 3em;
+  }
