--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
 p {
   text-shadow: 6px;
 }
+.mentions {
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: justify;
+    padding: 50px;
+}
 
 h1 {
   text-align: center;
