--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   color: #5a5a5a;
   margin-top: 3em;
+  margin-bottom: 0;
 }
 
 p {
@@ -12,12 +13,14 @@ p {
     margin-left: 30px;
     margin-right: 30px;
     text-align: justify;
-    padding: 50px;
+    padding-bottom: 3rem;
+    padding-top: 7rem;
 }
 
 h1 {
   text-align: center;
   padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .description-evenement {
@@ -109,7 +112,7 @@ a {
 footer {
  background-color: #212529;
  padding: 4rem;
- margin-top: 10em;
+ margin-top: 6em;
  color: white;
 }
 
@@ -138,7 +141,7 @@ footer {
       margin: auto;
     }
     .canicross {
-      width: 100%;
+    width: 100%;
     height: auto;
     margin-bottom: 10px;
     }
@@ -163,16 +166,18 @@ footer {
       }
   
       .canicross-left {
-        width: 600px;
+        width: 500px;
         height: auto;
         margin-left: 2rem;
+        margin-right: 2rem;
         float: left;
       }
 
       .canicross-right {
-        width: 600px;
+        width: 500px;
         height: auto;
         margin-right: 2rem;
+        margin-left: 2rem;
         float: right; 
       }
       
@@ -189,8 +194,6 @@ footer {
   
   .row {
     margin: auto;
-    
-  
   }
   .mb-4 {
     margin-top: 3em;
