--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 
 body {
   color: #5a5a5a;
-  margin-top: 3em;
-  margin-bottom: 0;
+  margin:0;
+  padding:0;
+  height:100%;
 }
 
 p {
@@ -111,9 +112,17 @@ a {
 
 footer {
  background-color: #212529;
- padding: 4rem;
- margin-top: 6em;
  color: white;
+ position:absolute;
+ bottom:0; 
+ width: 100%;
+ height: 100px;
+ text-align: left;
+ padding: 2em;
+}
+
+.float-end {
+    text-align: right;  
 }
 
 .fit-picture {
