--- a/style.css
+++ b/style.css
@@ -2,26 +2,18 @@
 
 body {
   color: #5a5a5a;
-  margin:0;
-  padding:0;
-  height:100%;
+  padding-top: 2%;
 }
 
 p {
   text-shadow: 6px;
 }
-.mentions {
-    margin-left: 30px;
-    margin-right: 30px;
-    text-align: justify;
-    padding-bottom: 3rem;
-    padding-top: 7rem;
-}
+
 
 h1 {
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  margin-top: 3%;
+  margin-bottom: 2%;
 }
 
 .description-evenement {
@@ -51,7 +43,6 @@ h1 {
   min-width: 100%;
  
 }
-
 
 .presentation {
   background-color: #ecece8;
@@ -102,7 +93,8 @@ a {
  
  a:hover {
    border-bottom: 1px solid;
-   background: #32363b;
+   background: #ffc131;
+   border-radius: 20%;
  }
  
  a:active {
@@ -110,30 +102,66 @@ a {
    color: #ffffff;
  }
 
-footer {
- background-color: #212529;
- color: white;
- position:absolute;
- bottom:0; 
- width: 100%;
- height: 100px;
- text-align: left;
- padding: 2em;
-}
-
-.float-end {
-    text-align: right;  
-}
+ .footer-basic {
+    padding:40px 0;
+    background-color:#212529;
+    color:#ffffff;
+    margin-top: 4em;
+  }
+  
+  .footer-basic ul {
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:18px;
+    line-height:1.6;
+    margin-bottom:0;
+  }
+  
+  .footer-basic li {
+    padding:0 10px;
+  }
+  
+  .footer-basic ul a {
+    text-decoration:none;
+    opacity:2px;
+    padding:10px;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    width:40px;
+    height:40px;
+    display:inline-block;
+    text-align:center;
+    margin:0 8px;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:#ffffff;
+    margin-bottom:0;
+  }
 
 .fit-picture {
     width: 30px;
-    margin-left: 10px;
   }
+
   .img-contact {
     width: 200px;
     height: 100%;
   }
   
+  .slider-pagementions {
+    width: 100%;
+    height: auto;
+  }
   /* RESPONSIVE CSS
   -------------------------------------------------- */
   
@@ -154,7 +182,6 @@ footer {
     height: auto;
     margin-bottom: 10px;
     }
-    
   
     iframe {
       width: 100%;
@@ -208,4 +235,10 @@ footer {
   .mb-4 {
     margin-top: 3em;
     padding-top: 3em;
+    padding-bottom: 2em;
   }
+
+  .mentions {
+    text-align: justify;
+    padding: 2em;
+}
