--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ p {
 
 h1 {
   text-align: center;
-  margin-top: 3%;
+  padding-top: 5%;
   margin-bottom: 2%;
+
 }
 
 .description-evenement {
@@ -163,25 +164,31 @@ a {
     width: 100%;
     height: auto;
   }
+  .canicross {
+  width: 100%;
+  height: auto;
+  }
+
   /* RESPONSIVE CSS
   -------------------------------------------------- */
   
   @media (max-width: 902px) {
     /* Bump up size of carousel content */
+    .canicross-slider {
+        width: 100%;
+        height: auto; 
+        display: flex;
+        margin: auto;
+    }
     .carousel {
       display: none;
     }
-  
+    
     .img-home {
       width: 100%;
       height: auto;
       display: flex;
       margin: auto;
-    }
-    .canicross-left, .canicross-right {
-    width: 100%;
-    height: auto;
-    margin-bottom: 10px;
     }
   
     iframe {
@@ -190,6 +197,9 @@ a {
     }
   }
     @media (min-width: 768px) {
+        .canicross-slider {
+        display: none;
+    }
       /* Bump up size of carousel content */
       .carousel-caption p {
         font-size: 20px; 
@@ -201,22 +211,6 @@ a {
         height: auto;
         display: flex;
         margin: auto;
-      }
-  
-      .canicross-left {
-        width: 500px;
-        height: auto;
-        margin-left: 2rem;
-        margin-right: 2rem;
-        float: left;
-      }
-
-      .canicross-right {
-        width: 500px;
-        height: auto;
-        margin-right: 2rem;
-        margin-left: 2rem;
-        float: right; 
       }
       
     .featurette-heading {
