--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   color: #5a5a5a;
-  padding-top: 2%;
+  padding-top: 30px;
 }
 
 p {
@@ -12,7 +12,7 @@ p {
 
 h1 {
   text-align: center;
-  padding-top: 5%;
+  padding-top: 90px;
   margin-bottom: 2%;
 
 }
