--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   color: #5a5a5a;
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 p {
@@ -12,7 +12,7 @@ p {
 
 h1 {
   text-align: center;
-  padding-top: 90px;
+  padding-top: 50px;
   margin-bottom: 2%;
 
 }
@@ -194,6 +194,16 @@ a {
     iframe {
       width: 100%;
       height: auto;
+    }
+    h1 {
+      text-align: center;
+      padding-top: 120px;
+      margin-bottom: 2%;
+    
+    }
+    body {
+      color: #5a5a5a;
+      padding-top: 100px;
     }
   }
     @media (min-width: 768px) {
