--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ a {
     h1 {
       text-align: center;
       padding-top: 120px;
+      margin-top: 50px;
       margin-bottom: 2%;
     
     }
