--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ a {
    color: #ffffff;
  }
 
+ /* Footer */
  .footer-basic {
     padding:40px 0;
     background-color:#212529;
@@ -179,6 +180,7 @@ a {
         height: auto; 
         display: flex;
         margin: auto;
+        padding-top: 10px;
     }
     .carousel {
       display: none;
@@ -197,7 +199,7 @@ a {
     }
     h1 {
       text-align: center;
-      margin-top: 20px;
+      margin-top: 10px;
       margin-bottom: 2%;
     
     }
